--- a/Interface/meu.kv
+++ b/Interface/meu.kv
@@ -31,7 +31,7 @@
 <Tela2>
     BoxLayout:
         orientation: 'vertical'
-        #spacing: 10
+        spacing: 10
         canvas:
             Color:
                 rgba: 0, 0.592, 0.698, 1
@@ -47,29 +47,29 @@
                     size: self.size
                     pos: self.pos
             orientation: 'vertical'
+            size_hint: 1,0.2
+
             AsyncImage:
                 source: 'image/logo_escuro.png'
-                size_hint: 1,0.3
-                #pos_hint: {'center_x':0.5, 'center_y':0.60}
-        #Parte de cima
-            Label:
-                text: 'Titulo'
+                size_hint: 0.6,0.6
+                pos_hint: {'center_x':0.5, 'center_y':0.30}
                 
         #parte de baixo (geral)
 
         BoxLayout:
             orientation: 'vertical'
-
             #Informações de entrada
             BoxLayout:
-                orientation: 'horizontal'
+                orientation: 'vertical'
+                size_hint: 1,0.25
 
-                Label:
-                    text: 'Titulo'
-                Label:
-                    text: 'Titulo 2'
-                Label:
-                    text: 'Titulo 3'
+
+                TextInput:
+                    size_hint: 0.8,1
+                    padding: 23
+                    hint_text: 'IMO DA EMBARCAÇÃO'
+                    multiline: False
+                    pos_hint: {'center_x':0.5, 'center_y':0.50}
 
             #Exibir informações capturadas
             BoxLayout:
